--- a/ASM/index.html
+++ b/ASM/index.html
@@ -42,7 +42,6 @@
     </div>
     <!-- Offcanvas Menu End -->
 
-    
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-3">
@@ -54,7 +53,7 @@
                     <nav class="header__menu mobile-menu">
                         <ul>
                             <li class="active"><a href="./index.html">Trang chủ</a></li>
-                            <li><a href="./shop.html">Sản phẩm</a></li>
+                            <li><a href="./pages/shop.html">Sản phẩm</a></li>
                             <li><a href="./about.html">Giới thiệu</a></li>
                         </ul>
                     </nav>
@@ -116,8 +115,8 @@
                     </ul>
                 </div>
             </div>
-            <div class="row product__filter">
-                <div class="col-lg-3 col-md-6 col-sm-6 col-md-6 col-sm-6 mix new-arrivals">
+            <div class="row product__filter" id="productLient">
+                <!-- <div class="col-lg-3 col-md-6 col-sm-6 col-md-6 col-sm-6 mix new-arrivals">
                     <div class="product__item">
                         <div class="product__item__pic" >
                             <img src="./public/img/product/ongiavabienca.jpg" alt="">
@@ -236,7 +235,7 @@
                                 và hành trình gian khổ của con người để biến ước mơ thành hiện thực</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 
             </div>
         </div>
@@ -400,6 +399,7 @@
     <script src="/public/js/mixitup.min.js"></script>
     <script src="/public/js/owl.carousel.min.js"></script>
     <script src="/public/js/main.js"></script>
+    <script src="./public/js/productLinent.js"></script>
 </body>
 
 </html>
