asm_ngohoangduy_pc05141

--- a/ASM/admin/dash.html
+++ b/ASM/admin/dash.html
@@ -48,7 +48,7 @@
             <hr class="sidebar-divider">
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="./pages/userAdmin.html">
+                <a class="nav-link" href="./pages/user/userAdmin.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>người dùng</span></a>
             </li>
