--- a/ASM/admin/pages/user/updateUserAdmin.html
+++ b/ASM/admin/pages/user/updateUserAdmin.html
@@ -12,16 +12,16 @@
     <title>Dybook</title>
 
     <!-- Custom fonts for this template -->
-    <link href="../../admin/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="../../../admin/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../../admin/css/sb-admin-2.css" rel="stylesheet">
+    <link href="../../../admin/css/sb-admin-2.css" rel="stylesheet">
 
     <!-- Custom styles for this page -->
-    <link href="../../admin/vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
+    <link href="../../../admin/vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
 
 </head>
 
@@ -35,7 +35,7 @@
 
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
-                <div class="sidebar-brand-text mx-3"><img src="../../public/img/DyBook2.png" alt="logo" height="70px" width="225px"></div>
+                <div class="sidebar-brand-text mx-3"><img src="../../../public/img/DyBook2.png" alt="logo" height="70px" width="225px"></div>
             </a>
 
             <!-- Divider -->
@@ -43,7 +43,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="../dash.html">
+                <a class="nav-link" href="../../dash.html">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Thống kê</span></a>
             </li>
@@ -51,7 +51,7 @@
             <hr class="sidebar-divider">
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="./userAdmin.html">
+                <a class="nav-link" href="../user/userAdmin.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>người dùng</span></a>
             </li>
@@ -65,7 +65,7 @@
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
             <li class="nav-item">
-                <a class="nav-link" href="./cateAdmin.html">
+                <a class="nav-link" href="../category/cateAdmin.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Thể loại</span></a>
             </li>
@@ -193,23 +193,23 @@
     <!-- End of Page Wrapper -->
 
     <!-- Bootstrap core JavaScript-->
-    <script src="../vendor/jquery/jquery.min.js"></script>
-    <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../../vendor/jquery/jquery.min.js"></script>
+    <script src="../../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Core plugin JavaScript-->
-    <script src="../vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="../../vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for all pages-->
-    <script src="../js/sb-admin-2.min.js"></script>
+    <script src="../../js/sb-admin-2.min.js"></script>
 
     <!-- Page level plugins -->
-    <script src="../vendor/datatables/jquery.dataTables.min.js"></script>
-    <script src="../vendor/datatables/dataTables.bootstrap4.min.js"></script>
+    <script src="../../vendor/datatables/jquery.dataTables.min.js"></script>
+    <script src="../../vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
     <!-- Page level custom scripts -->
-    <script src="../js/demo/datatables-demo.js"></script>
-    <!-- <script src="../js/user/listUser.js" type="module"></script> -->
-    <script src="../js/user/index.js" type="module"></script>
+    <script src="../../js/demo/datatables-demo.js"></script>
+    <!-- <script src="../../js/user/listUser.js" type="module"></script> -->
+    <script src="../../js/user/index.js" type="module"></script>
     <!-- <script src="../js/user/updateUser.js" type="module"></script> -->
 
 </body>
