asm_ngohoangduy_pc05141

--- a/ASM/admin/pages/user/addUser.html
+++ b/ASM/admin/pages/user/addUser.html
@@ -58,7 +58,7 @@
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
             <li class="nav-item">
-                <a class="nav-link" href="./productAdmin.html">
+                <a class="nav-link" href="../product/productAdmin.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Sản phẩm</span></a>
             </li>
@@ -72,7 +72,7 @@
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
             <li class="nav-item">
-                <a class="nav-link" href="./cartAdmin.html">
+                <a class="nav-link" href="../cart/cartAdmin.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Hóa đơn</span></a>
             </li>
