--- a/ASM/admin/dash.html
+++ b/ASM/admin/dash.html
@@ -40,7 +40,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="index.html">
+                <a class="nav-link" href="./dash.html">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Thống kê</span></a>
             </li>
@@ -55,14 +55,14 @@
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
             <li class="nav-item">
-                <a class="nav-link" href="./pages/productAdmin.html">
+                <a class="nav-link" href="../admin/pages/product/productAdmin.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Sản phẩm</span></a>
             </li>
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
             <li class="nav-item">
-                <a class="nav-link" href="./pages/cateAdmin.html">
+                <a class="nav-link" href="../admin/pages/category/cateAdmin.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Thể loại</span></a>
             </li>
