--- a/ASM/admin/pages/product/addproduct.html
+++ b/ASM/admin/pages/product/addproduct.html
@@ -58,7 +58,7 @@
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
             <li class="nav-item">
-                <a class="nav-link" href="../product/productAdmin.html">
+                <a class="nav-link" href="./productAdmin.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Sản phẩm</span></a>
             </li>
@@ -72,7 +72,7 @@
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
             <li class="nav-item">
-                <a class="nav-link" href="../cart/cartAdmin.html">
+                <a class="nav-link" href="./cartAdmin.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Hóa đơn</span></a>
             </li>
@@ -118,52 +118,75 @@
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
-                    <h1 class="h3 mb-2 text-gray-800">Cập nhật người dùng</h1>
+                    <h1 class="h3 mb-2 text-gray-800">Thêm sản phẩm</h1>
                     <!-- DataTales Example -->
                     <div class="card shadow mb-4">
                         <div class="card-body">
                             <div class="table-responsive">
                                 <form >
                                     <div class="col-md-8 position-relative">
-                                      <label for="validationTooltip01" class="form-label">Họ tên</label>
+                                      <label for="validationTooltip01" class="form-label">Tên sản phẩm</label>
                                       <input type="text" class="form-control" id="name" required>
                                       <div class="valid-tooltip">
                                         Looks good!
                                       </div>
                                     </div>
                                     <div class="col-md-8 position-relative p-2">
-                                      <label for="validationTooltip02" class="form-label">Email</label>
-                                      <input type="text" class="form-control" id="email" required>
+                                      <label for="validationTooltip02" class="form-label">Giá</label>
+                                      <input type="number" class="form-control" id="price" min="0" required>
                                       <div class="valid-tooltip">
                                         Looks good!
                                       </div>
                                     </div>
                                     <div class="col-md-8 position-relative p-2">
-                                        <label for="validationTooltip02" class="form-label">SĐT</label>
-                                        <input type="text" class="form-control" id="phone" required>
+                                        <label for="validationTooltip02" class="form-label">Giới thiệu</label>
+                                        <input type="text" class="form-control" id="description" required>
                                         <div class="valid-tooltip">
                                           Looks good!
                                         </div>
-                                      </div>
-                                      <div class="col-md-8 position-relative p-2">
-                                        <label for="validationTooltip02" class="form-label">Địa chỉ</label>
-                                        <input type="text" class="form-control" id="address" required>
+                                    </div>
+                                    <div class="col-md-8 position-relative p-2">
+                                        <label for="validationTooltip02" class="form-label">Mô tả</label>
+                                        <textarea  id="status" class="form-control" cols="30" rows="10"></textarea>
                                         <div class="valid-tooltip">
                                           Looks good!
                                         </div>
-                                      </div>
+                                    </div>
+                                    <div class="col-md-8 position-relative p-2">
+                                        <label for="validationTooltip02" class="form-label">Sale</label>
+                                        <input type="number" class="form-control" id="sale" min="0" required>
+                                        <div class="valid-tooltip">
+                                          Looks good!
+                                        </div>
+                                    </div>
+                                    <div class="col-md-8 position-relative p-2">
+                                        <label for="validationTooltip02" class="form-label">View</label>
+                                        <input type="number" class="form-control" id="view" min="0" required>
+                                        <div class="valid-tooltip">
+                                          Looks good!
+                                        </div>
+                                    </div>
                                     <div class="col-md-12 position-relative mt-4">
-                                      <label for="validationTooltip04" class="form-label">Quản trị</label>
-                                      <select class="form-select" id="role" required>
-                                        <option value="2">User</option>
-                                        <option value="1">Admin</option>
+                                      <label for="validationTooltip04" class="form-label">Thể loại</label>
+                                      <select class="form-select" id="cate" required>
+                                        <option value="0">Tiểu thuyết</option>
+                                        <option value="1">Sức khỏe</option>
+                                        <option value="2">Thơ</option>
+                                        <option value="3">Kinh dị</option>
                                       </select>
                                       <div class="invalid-tooltip">
                                         Please select a valid state.
                                       </div>
                                     </div>
+                                    <div class="col-md-8 position-relative p-2">
+                                        <label for="validationTooltip02" class="form-label">Hình ảnh</label>
+                                        <input type="file" class="form-control" id="img"  required>
+                                        <div class="valid-tooltip">
+                                          Looks good!
+                                        </div>
+                                    </div>
                                     <div class="col-12 mt-4">
-                                      <button class="btn btn-primary" type="submit" id="btnUpUser">Cập nhật</button>
+                                      <button class="btn btn-dark" type="submit" id="btnAddProduct">Thêm</button>
                                     </div>
                                 </form>
                             </div>
@@ -209,7 +232,7 @@
     <!-- Page level custom scripts -->
     <script src="../../js/demo/datatables-demo.js"></script>
     <!-- <script src="../../js/user/listUser.js" type="module"></script> -->
-    <script src="../../js/user/index.js" type="module"></script>
+    <script src="../../js/product/index.js" type="module"></script>
     <!-- <script src="../js/user/updateUser.js" type="module"></script> -->
 
 </body>
