--- a/ASM/admin/pages/product/productAdmin.html
+++ b/ASM/admin/pages/product/productAdmin.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 
     <meta charset="utf-8">
@@ -58,7 +57,7 @@
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
             <li class="nav-item">
-                <a class="nav-link" href="../product/productAdmin.html">
+                <a class="nav-link" href="./productAdmin.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Sản phẩm</span></a>
             </li>
@@ -72,7 +71,7 @@
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
             <li class="nav-item">
-                <a class="nav-link" href="../cart/cartAdmin.html">
+                <a class="nav-link" href="./cartAdmin.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Hóa đơn</span></a>
             </li>
@@ -118,54 +117,37 @@
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
-                    <h1 class="h3 mb-2 text-gray-800">Cập nhật người dùng</h1>
+                    <h1 class="h3 mb-2 text-gray-800">Sản phẩm</h1>
                     <!-- DataTales Example -->
                     <div class="card shadow mb-4">
                         <div class="card-body">
+                            <div class="mb-2">
+                                <a class="btn btn-dark" href="./addproduct.html">Thêm</a>
+                            </div>
                             <div class="table-responsive">
-                                <form >
-                                    <div class="col-md-8 position-relative">
-                                      <label for="validationTooltip01" class="form-label">Họ tên</label>
-                                      <input type="text" class="form-control" id="name" required>
-                                      <div class="valid-tooltip">
-                                        Looks good!
-                                      </div>
-                                    </div>
-                                    <div class="col-md-8 position-relative p-2">
-                                      <label for="validationTooltip02" class="form-label">Email</label>
-                                      <input type="text" class="form-control" id="email" required>
-                                      <div class="valid-tooltip">
-                                        Looks good!
-                                      </div>
-                                    </div>
-                                    <div class="col-md-8 position-relative p-2">
-                                        <label for="validationTooltip02" class="form-label">SĐT</label>
-                                        <input type="text" class="form-control" id="phone" required>
-                                        <div class="valid-tooltip">
-                                          Looks good!
-                                        </div>
-                                      </div>
-                                      <div class="col-md-8 position-relative p-2">
-                                        <label for="validationTooltip02" class="form-label">Địa chỉ</label>
-                                        <input type="text" class="form-control" id="address" required>
-                                        <div class="valid-tooltip">
-                                          Looks good!
-                                        </div>
-                                      </div>
-                                    <div class="col-md-12 position-relative mt-4">
-                                      <label for="validationTooltip04" class="form-label">Quản trị</label>
-                                      <select class="form-select" id="role" required>
-                                        <option value="2">User</option>
-                                        <option value="1">Admin</option>
-                                      </select>
-                                      <div class="invalid-tooltip">
-                                        Please select a valid state.
-                                      </div>
-                                    </div>
-                                    <div class="col-12 mt-4">
-                                      <button class="btn btn-primary" type="submit" id="btnUpUser">Cập nhật</button>
-                                    </div>
-                                </form>
+                                <table class="table table-bordered"  width="100%" cellspacing="0">
+                                    <thead>
+                                        <tr>
+                                            <th>STT</th>
+                                            <th>Tên sản phẩm</th>
+                                            <th>Hình ảnh</th>
+                                            <th>Giá</th>
+                                            <th>Thể loại</th>
+                                            <th>Thao tác</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody id="listProduct">
+                                        <!-- <tr>
+                                            <td>Tiger Nixon</td>
+                                            <td>System Architect</td>
+                                            <td>Edinburgh</td>
+                                            <td>61</td>
+                                            <td>2011/04/25</td>
+                                            <td>$320,800</td>
+                                        </tr> -->
+                                    </tbody>
+                                </table>
+                                
                             </div>
                         </div>
                     </div>
@@ -180,7 +162,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>NgoDuy &copy; Dybook</span>
+                        <span>Copyright &copy; Your Website 2020</span>
                     </div>
                 </div>
             </footer>
@@ -208,9 +190,8 @@
 
     <!-- Page level custom scripts -->
     <script src="../../js/demo/datatables-demo.js"></script>
-    <!-- <script src="../../js/user/listUser.js" type="module"></script> -->
-    <script src="../../js/user/index.js" type="module"></script>
-    <!-- <script src="../js/user/updateUser.js" type="module"></script> -->
+    <!-- <script src="../js/user/listUser.js" type="module"></script> -->
+    <script src="../../js/product/index.js" type="module"></script>
 
 </body>
 
