--- a/ASM/pages/shopping-cart.html
+++ b/ASM/pages/shopping-cart.html
@@ -124,28 +124,9 @@
                                 </tr>
                             </thead>
                             <tbody id="show-Cart">
-                                <!-- <tr>
-                                    <td class="product__cart__item">
-                                        <div class="product__cart__item__pic">
-                                            <img src="img/shopping-cart/cart-1.jpg" alt="">
-                                        </div>
-                                        <div class="product__cart__item__text">
-                                            <h6>T-shirt Contrast Pocket</h6>
-                                            <h5>$98.49</h5>
-                                        </div>
-                                    </td>
-                                    <td class="quantity__item">
-                                        <div class="quantity">
-                                            <div class="pro-qty-2">
-                                                <input type="text" value="1">
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td class="cart__price">$ 30.00</td>
-                                    <td class="cart__close"><i class="fa fa-close"></i></td>
-                                </tr> -->
                             </tbody>
                         </table>
+                        <button class="primary-btn">Thanh toán</button>
                     </div>
                     <div class="row">
                         <div class="col-lg-6 col-md-6 col-sm-6">
@@ -252,7 +233,7 @@
     <script src="../public/js/mixitup.min.js"></script>
     <script src="../public/js/owl.carousel.min.js"></script>
     <script src="../public/js/main.js"></script>
-    <script src="../public/js/shopingCart.js"></script>
+    <script src="../public/js/shopingCart.js" type="module"></script>
 </body>
 
 </html>
